--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </head>
 
     <body id="reportsPage">
-            <div id="my_dataviz">SEE FUTURE MAP HERE</div>
         <div class="" id="home">
             <div class="container">
                 <div class="row">
@@ -101,7 +100,7 @@
                         <div class="bg-white tm-block h-100">
                             <!--Graph Here-->
                             <h2 class="tm-block-title">Salary v. Wins</h2>
-                            <canvas id="lineChart"></canvas>
+                            <div id="salary-vs-wins"></div>
                         </div>
                     </div>
                     <div class="tm-col tm-col-big">
